--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   @font-face {
     font-family: 'SupercellMagic';
-    src: url('/SupercellMagic.ttf') format('truetype');
+    src: url('/Clash_Regular.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
   }
