--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,13 @@
     font-weight: normal;
     font-style: normal;
   }
+
+  @font-face {
+    font-family: 'Alegreya';
+    src: url('/Alegreya-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
   
   :root {
     --background: 36 33% 92%; /* off-white parchment */
