--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,13 +115,7 @@
     @apply bg-gradient-to-br from-green-100/40 to-blue-100/30 dark:from-green-900/20 dark:to-blue-900/20 border-green-500/30 rounded-xl shadow-lg;
   }
 
-  @keyframes shine {
-    to {
-      background-position-x: -200%;
-    }
-  }
-
-  .group.relative.bg-primary::after {
+  .bg-primary.group::after {
     content: "";
     position: absolute;
     top: 0;
@@ -139,7 +133,13 @@
     transition: background-position-x 0s ease-in-out;
   }
 
-  .group.relative.bg-primary:hover::after {
+  .bg-primary.group:hover::after {
     animation: shine 1.2s ease-in-out;
+  }
+
+  @keyframes shine {
+    to {
+      background-position-x: -200%;
+    }
   }
 }
